Revert "fix(greeting): adjust font sizes and hide content on smaller screens"
This reverts commit 35f1db193fc99416eedc10e1971928a09c979839.

--- a/src/app/summary/summary.scss
+++ b/src/app/summary/summary.scss
@@ -375,26 +375,22 @@ section {
 .greeting {
   width: 100%;
 
+  @media (max-width: 1060px) {
+    display: none;
+  }
+
   p {
-    font-size: clamp(1.25rem, -0.5rem + 3vw, 2.5rem);
+    font-size: clamp(1.5em, 6.667vw - 3.5em, 2.5em);
     color: #2a3647;
-    white-space: nowrap;
   }
 
   .name {
     color: #29abe2;
-    font-size: clamp(2.25rem, -1rem + 5vw, 4rem);
+    font-size: clamp(2.25em, 11.667vw - 6.5em, 4em);
     font-weight: bold;
-    white-space: nowrap;
-  }
-
-  @media (max-width: 1060px) {
-    display: none;
-
-    p,
-    .name {
-      display: none;
-    }
+    word-break: break-word;
+    overflow-wrap: break-word;
+    white-space: wrap;
   }
 }
 
